fixed sudoku link

--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -85,7 +85,7 @@
     </div>
     <div class="project-tile" id="f15">
       <a class="project-link" href="/sudoku" target="_blank"><img class="project-img" src=""></img></a>
-      <a href="" target="_blank"><button class="project-btn">Sudoku Solver</button></a>
+      <a href="/sudoku" target="_blank"><button class="project-btn">Sudoku Solver</button></a>
     </div>
     <div class="project-tile" id="f16">
         <a class="project-link" href="" target="_blank"><img class="project-img" src=""></img></a>
