--- a/views/shorturl.html
+++ b/views/shorturl.html
@@ -44,8 +44,8 @@
           <input type="submit" value="Receive short URL" target="_blank">
         </form>
         <h3>Example Usage:</h3>
-        <a href="https://inc0mple-projects.herokuapp.com/api/shorturl/k3qucxKpw">
-          [this_project_url]/api/shorturl/k3qucxKpw
+        <a href="https://inc0mple-portfolio.herokuapp.com/api/shorturl/2LiUHkrsC">
+          [this_project_url]/api/shorturl/2LiUHkrsC
         </a>
 
         <h3>Will Redirect to:</h3>
@@ -53,8 +53,8 @@
 
         <h3>Try short URL here:</h3>
         <form id="redirect-form" action="api/shorturl" method="GET" target="_blank">
-          <label for="user-input">https://inc0mple-projects.herokuapp.com/api/shorturl/</label>
-          <input id="user-input" type="text" name="userURL" value="k3qucxKpw">
+          <label for="user-input">https://inc0mple-portfolio.herokuapp.com/api/shorturl/</label>
+          <input id="user-input" type="text" name="userURL" value="2LiUHkrsC">
           <input type="submit" onclick=appendURL() value="Go to URL">
           <a id="output-link" href="" target="_blank"><p id="output-val"></p></a>
         </form>
