--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -84,7 +84,7 @@
       <a href="https://codepen.io/Incomple_/full/abZbwxV" target="_blank"><button class="project-btn">D3 Treemap Diagram</button></a>
     </div>
     <div class="project-tile" id="f15">
-      <a class="project-link" href="/sudoku" target="_blank"><img class="project-img" src=""></img></a>
+      <a class="project-link" href="/sudoku" target="_blank"><img class="project-img" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/chrome_LOOZCXwiZn.png"></img></a>
       <a href="/sudoku" target="_blank"><button class="project-btn">Sudoku Solver</button></a>
     </div>
     <div class="project-tile" id="f16">
