--- a/views/fileanalyse.html
+++ b/views/fileanalyse.html
@@ -3,7 +3,7 @@
 <html>
 
    <head>
-    <title>File Metadata</title>
+    <title>Microservices</title>
     <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
@@ -19,21 +19,14 @@
 
       <div class="container">
         <a id="main-page-link" href="" onclick=goBack() ><p>Back to Main Page</p></a>
-        <h2>API Project: File Metadata Microservice</h2>
-        <h3>User Stories:</h3>
-        <ol class="user-stories">
-          <li>I can submit a form object that includes a file upload.</li>
-          <li>The from file input field  has the "name" attribute set to "upfile". We rely on this in testing.</li>
-          <li>When I submit something, I will receive the file name, and size in bytes within the JSON response.</li>
-        </ol>
-
-        <h3>Usage:</h3>
+        <h2>Various Microservices</h2>
+        <h3>File Analyser:</h3>
         <p>
           Please Upload a File ...
         </p>
         <div class="view">
           <h4 id="output"></h4>
-          <form enctype="multipart/form-data" method="POST" action="/fileanalyse/api/fileanalyse">
+          <form enctype="multipart/form-data" method="POST" action="/fileanalyse/upload">
             <input id="inputfield" type="file" name="upfile">
             <input id="button" type="submit" value="Upload">
           </form>
