--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -88,32 +88,24 @@
       <a href="/sudoku" target="_blank"><button class="project-btn">Sudoku Solver</button></a>
     </div>
     <div class="project-tile" id="f16">
-        <a class="project-link" href="" target="_blank"><img class="project-img" src=""></img></a>
-        <a href="" target="_blank"><button class="project-btn">Coming Soon!</button></a>
-      </div>
+      <a class="project-link" href="" target="_blank"><img class="project-img" src=""></img></a>
+      <a href="" target="_blank"><button class="project-btn">Coming Soon!</button></a>
+    </div>
   </div>
   <p class="projtext">Back-end Projects</p>
   <div id="back-end" class="projects-area">
     <div class="project-tile" id="b1">
       <a class="project-link" href="/fileanalyse" target="_blank"><img class="project-img" src=""></img></a>
-      <a href="/fileanalyse" target="_blank"><button class="project-btn">File Analyser</button></a>
+      <a href="/fileanalyse" target="_blank"><button class="project-btn">Various Microservices</button></a>
     </div>
     <div class="project-tile" id="b2">
-        <a class="project-link" href="/exercise" target="_blank"><img class="project-img" src=""></img></a>
-        <a href="/exercise" target="_blank"><button class="project-btn">Exercise Tracker</button></a>
-      </div>
-      <div class="project-tile" id="b3">
-        <a class="project-link" href="/shorturl" target="_blank"><img class="project-img" src=""></img></a>
-        <a href="/shorturl" target="_blank"><button class="project-btn">URL Shortener</button></a>
-      </div>
-      <div class="project-tile" id="b4">
-        <a class="project-link" href="/library" target="_blank"><img class="project-img" src=""></img></a>
-        <a href="/library" target="_blank"><button class="project-btn">Library</button></a>
-      </div>
-      <div class="project-tile" id="b5">
-        <a class="project-link" href="/index" target="_blank"><img class="project-img" src=""></img></a>
-        <a href="/index" target="_blank"><button class="project-btn">Coming Soon!</button></a>
-      </div>
+      <a class="project-link" href="/exercise" target="_blank"><img class="project-img" src="https://raw.githubusercontent.com/Inc0mple/Logos/master/exerciseTrackerBackground.png"></img></a>
+      <a href="/exercise" target="_blank"><button class="project-btn">Exercise Tracker</button></a>
+    </div>
+    <div class="project-tile" id="b3">
+      <a class="project-link" href="/index" target="_blank"><img class="project-img" src=""></img></a>
+      <a href="/index" target="_blank"><button class="project-btn">Coming Soon!</button></a>
+    </div>
   </div>
   <div id="improvement-list">
     List of improvements to make:
